see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-Oct-2009 Andrew Eddie
# Fixed bug preventing frontend login.

02-Oct-2009 Louis Landry
! - Merged acl2 branch into trunk with new and improved ACL system.

02-Oct2009 Andrew Eddie
# Fix bugs in rules fields (wrong extension given).
^ Split layout of admin mod_menu into enabled and disabled layouts.
^ Reverse direction of user groups to allow top-down inheritance.

01-Oct-2009 Louis Landry
- Removed JFormFieldAccessSections
- Removed JAccessHelper
^ Drastically simplified JAccess and made all methods static.
# Fix problem where admin session timeout produces an exception because of the request url.

01-Oct-2009 Andrew Eddie
- Removed JAccessLevel and JSimpleRule
^ Rename jos_access_assets to jos_assets
+ Added permissions to global configuration.
+ Added permissions to component configuration.
^ Split com_banners helper into site and admin; renamed to BannersHelper.

01-Oct-2009 Ian MacLennan
 # [#16484] Changed addslashes to addcslashes in RegistryFormatPHP so that only \ and ' get slashes added.  (fix from 1.5)

01-Oct-2009 Ercan Ozkaya
 ^ Replaced all $ instances to document.id for Mootools except third party classes
 + Added transliteration override support for language packs

29-Sep-2009 Louis Landry
^ Restructured the access control system and simplified the database model to use JRules and a singular nested asset tree.

29-Sep-2009 Ron Severdia
# Template Manager cleanup
# CSS for com_users
^ Replace tables
+ New ACL icons

29-Sep-2009 Gergo Erdosi
 # Fixed some call_user_func_array() bugs.

28-Sep-2009 Ron Severdia
^ CSS cleanup
^ Changed commented-out to CSS hide in edit category