@@ -53,8 +53,17 @@ JHtml::_('behavior.formvalidation');
 
 					<?php echo $this->form->getLabel('access'); ?>
 					<?php echo $this->form->getInput('access'); ?>
+					
+					<?php echo $this->loadTemplate('options'); ?>
+					
+					<div class="clr"></div>
+					<?php echo $this->form->getLabel('description'); ?>
+					<div class="clr"></div>
+					<?php echo $this->form->getInput('description'); ?>
+										
 		</fieldset>
 	</div>
+
 	<div class="width-40 fltrt">
 		<fieldset>
 			<legend><?php echo JText::_('Categories_Fieldset_Rules');?></legend>
@@ -62,22 +71,14 @@ JHtml::_('behavior.formvalidation');
 					<?php echo $this->form->getInput('rules'); ?>
 		</fieldset>
 	</div>
-	<div class="width-40 fltrt">
-		<fieldset>
-			<legend><?php echo JText::_('Categories_Fieldset_Options');?></legend>
-			<?php echo $this->loadTemplate('options'); ?>
-		</fieldset>
-	</div>
+	
 	<div class="width-40 fltrt">
 		<fieldset>
 			<legend><?php echo JText::_('Categories_Fieldset_Metadata'); ?></legend>
 			<?php echo $this->loadTemplate('metadata'); ?>
 		</fieldset>
 	</div>
-	<div class="clr"></div>
-	<?php echo $this->form->getLabel('description'); ?>
-	<div class="clr"></div>
-	<?php echo $this->form->getInput('description'); ?>
+
 
 	<input type="hidden" name="task" value="" />
 	<?php echo JHtml::_('form.token'); ?>
